almost complete rewrite of the underlying JS,:  - z-index is no longer fix in css but calculated, depending on the z-level of the password field, the indicator is attached to - fixing #1  - toggling visibility of a password field now also toggles visibility of indicator - fixing #2  - attaching icons to a password field (i.e. moved passwords field are now "followed" by the indicator) - fixing #4  - delayed addition or insertion of new DOM nodes of type password input is now observed and indicators are added dynamically whenever appropriate - fixing #5

--- a/inspector.css
+++ b/inspector.css
@@ -1,24 +1,22 @@
-﻿.pw-inspector-length {
-	background-color: white;
-	box-shadow: 0px 0px 3px 0px black;
-	border: 1px solid #eee;
-	position: absolute;
-	font-size: 11px;
-	color: #5a5a5a;
-	z-index: 2000;
-	border-radius: 5px;
-	min-width: 18px;
-	height: 18px;
-	text-align: center;
-	line-height: 18px;
-	font-weight: bold;
-	font-family: 'Open Sans', 'Roboto', 'Droid Sans', 'Calibri', 'Verdana', 'Arial', sans-serif;
-	margin-left: 0;
-	cursor: move;
+.pw-inspector-length {
+    background-color: white;
+    border: 1px solid #aaa;
+    position: absolute;
+    font-size: 11px;
+    color: #5a5a5a;
+    vertical-align: middle;
+    min-width: 18px;
+    min-height: 18px;
+    text-align: center;
+    line-height: 18px;
+    font-weight: bold;
+    font-family:'Open Sans', 'Roboto', 'Droid Sans', 'Calibri', 'Verdana', 'Arial', sans-serif;
+    margin-left: 0;
+    cursor: move;
     padding: 0px 2px;
     letter-spacing: 1px;
+    opacity: 0.8;
 }
-
 .pw-inspector-length.large-font {
-	font-size: 15pt;
+    font-size: 15pt;
 }
